# spork

./: README.md
.github/workflows/: pages.yml
ci_music/: .gitignore  Cargo.toml  Dockerfile  demo.html
ci_music/planning/: conversation.md
ci_music/src/: bands.rs  index.html  lib.rs  server.rs  vocoder.rs
cochlear/: CLAUDE.md
cochlear/.github/workflows/: pages.yml
cochlear/ci_music/: .dockerignore  CLAUDE.md  Cargo.toml  README.md
cochlear/ci_music/src/: audio.rs  filter.rs  main.rs  server.rs
cochlear/web/: index.html
web/: index.html  viz.js  viz.test.js
