[package]
name = "ci_music"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ci_music"
path = "src/main.rs"

# Dependencies shared between native and WASM targets
[dependencies]
hound = "3.5"
rustfft = "6.2"

# Native-only dependencies (CLI + web server)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "vorbis", "wav", "pcm", "isomp4"] }

# WASM-only dependency
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
